2016-11-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Replace defective powf() and powl() function implementations.

	* mingwex/math/powf.c mingwex/math/powl.c: Delete; replaced by...
	* mingwex/math/pow_generic.sx: ...this new file; it implements...
	(__x87pow): ...this generic power function back-end, serving...
	(pow, powf, powl): ...each of these front-end entry points.

	* Makefile.in (libmingwex.a): Add x87pow.$OBJEXT

	* include/math.h (powf): Remove inline implementation; it no longer
	offers any inline advantage.

2016-11-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement unit tests for power functions.

	* tests/testsuite.at.in: m4_include...
	* tests/Makefile.in (testsuite): ...and add dependency on...
	* tests/powerfunc.at: ...this new file; it specifies unit tests to
	check POSIX.1-2008 compliance of results and errno assignment from...
	(pow, powf, powl): ...each of these functions.

2016-11-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add POSIX compliant errno assignments to log functions.

	* include/errno.h: Make it assembly language compatible.
	[__ASSEMBLER__]: Omit <_mingw.h>; do not declare prototype for...
	(_errno): ...this accessor function; the declaration is syntactically
	invalid, in assembly language code.

	* mingwex/math/errno.sx: New file; when included by other assembly
	language files, it provides bindings for assignement of any constant
	defined in <errno.h> to the global errno variable, facilitated by...
	(errno): ...this new GAS macro.

	* mingwex/math/log_generic.sx: New file; it provides a generic back
	end implementation for multiple logarithmic functions, accessed via...
	(___x87log, ___x87log_chk): ...this pair of entry points, serving...
	(log, logf, log): ...each of these primary functions; it replaces...
	* mingwex/math/logf.s mingwex/math/logl.s: ...these; delete them.

	* mingwex/math/log1p_generic.sx mingwex/math/log10_generic.sx